Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2013-01-11 (SVN):
    * pr_exec.c (PR_ExecuteProgram): when interpreting a version6 progs,
      calculate the jump offset not by first decrementing a, b or c and
      then casting the result to signed short, but by casting first to
      signed short and then decrementing. the former gives wrong result
      for -32768 (or 32768), a corner case I couldn't hit in real world
      yet. this was possibly a parenthesis typo by Pa3PyX back in 2003,
      or some kind of thinko in an already confusing case.
    * updated version date stamp to 2013-01-11.

2013-01-10 (SVN):
    * in_amiga.c, snd_ahi.c: updates from Szilard Biro to fix predefined
      OS macros usage.

2013-01-10 (SVN):
    * Makefiles, MorphOS builds: Add -lm to linker flags where relevant.

2013-01-10 (SVN):
    * gl_rmain.c (R_DrawAliasModel): check whether the skinnum is legit,
      set it to 0 otherwise, just like in the software renderer version.
      this works around archer models sometimes being drawn as "white"
      in certain weird mods, i.e. project peanut, where the mod's hcode
      initializes those entities with non-existant skins. while we were
      there, did a little tidying too.

2013-01-10 (SVN):
    * Incremented engine version to 1.5.6 and datestamp to 2013-01-10 in
      the development tree.

2013-01-07 (1.5.5-final / SVN):
    * removed several custom macros, especially those with underscores,
      in arch_def.h which reportedly did more harm than good. tidied up
      several other macros. adjusted all of the code for the changes.
    * utils/common/threads.c: fixed a typo in BSD-specific sysctl code.

2013-01-05 (SVN):
    * switched AROS and MorphOS clients build from SDL to native code,
      as requested by Szilard Biro.

2013-01-03 (SVN):
    * moved $topdir/libs/common to $topdir/common, adjusted makefiles
      and MS Visual Studio project files.

2013-01-03 (SVN):