@@ -156,6 +156,7 @@ void PR_ExecuteProgram (func_t fnum)
 	int profile, startprofile;
 	edict_t		*ed;
 	int		exitdepth;
+	int		jump_ofs;
 	/* switch/case support:  */
 	int		case_type = -1;
 	float	switch_float = 0; /* avoid 'maybe used unititialized' */
@@ -491,19 +492,25 @@ void PR_ExecuteProgram (func_t fnum)
 		 * ends up sign-extended and we get a proper negative offset,
 		 * if there is one.
 		 */
-			st += (is_progs_v6) ? (signed short)st->b - 1 : st->b - 1;	/* -1 to offset the st++ */
+			jump_ofs = st->b;
+			if (is_progs_v6) jump_ofs = (signed short)jump_ofs;
+			st += jump_ofs - 1;	/* -1 to offset the st++ */
 		}
 		break;
 
 	case OP_IF:
 		if (OPA->_int)
 		{
-			st += (is_progs_v6) ? (signed short)st->b - 1 : st->b - 1;	/* -1 to offset the st++ */
+			jump_ofs = st->b;
+			if (is_progs_v6) jump_ofs = (signed short)jump_ofs;
+			st += jump_ofs - 1;	/* -1 to offset the st++ */
 		}
 		break;
 
 	case OP_GOTO:
-		st += (is_progs_v6) ? (signed short)st->a - 1 : st->a - 1;		/* -1 to offset the st++ */
+		jump_ofs = st->a;
+		if (is_progs_v6) jump_ofs = (signed short)jump_ofs;
+		st += jump_ofs - 1;	/* -1 to offset the st++ */
 		break;
 
 	case OP_CALL8:
@@ -742,7 +749,9 @@ void PR_ExecuteProgram (func_t fnum)
 	case OP_SWITCH_F:
 		case_type = SWITCH_F;
 		switch_float = OPA->_float;
-		st += (is_progs_v6) ? (signed short)st->b - 1 : st->b - 1;	/* -1 to offset the st++ */
+		jump_ofs = st->b;
+		if (is_progs_v6) jump_ofs = (signed short)jump_ofs;
+		st += jump_ofs - 1;	/* -1 to offset the st++ */
 		break;
 	case OP_SWITCH_V:
 	case OP_SWITCH_S:
@@ -760,7 +769,9 @@ void PR_ExecuteProgram (func_t fnum)
 		}
 		if ((switch_float >= OPA->_float) && (switch_float <= OPB->_float))
 		{
-			st += (is_progs_v6) ? (signed short)st->c - 1 : st->c - 1;		/* -1 to offset the st++ */
+			jump_ofs = st->c;
+			if (is_progs_v6) jump_ofs = (signed short)jump_ofs;
+			st += jump_ofs - 1;	/* -1 to offset the st++ */
 		}
 		break;
 	case OP_CASE:
@@ -769,7 +780,9 @@ void PR_ExecuteProgram (func_t fnum)
 		case SWITCH_F:
 			if (switch_float == OPA->_float)
 			{
-				st += (is_progs_v6) ? (signed short)st->b - 1 : st->b - 1;	/* -1 to offset the st++ */
+				jump_ofs = st->b;
+				if (is_progs_v6) jump_ofs = (signed short)jump_ofs;
+				st += jump_ofs - 1;	/* -1 to offset the st++ */
 			}
 			break;
 		case SWITCH_V:
